fix: correct post controller tests for liking and displaying post on Home Screen